WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290538
Logging in dispatchDecidePolicyForNavigationAction() should not be error logging
https://bugs.webkit.org/show_bug.cgi?id=290538
Summary
Logging in dispatchDecidePolicyForNavigationAction() should not be error logging
Chris Dumez
Reported
2025-03-27 08:50:54 PDT
Logging in dispatchDecidePolicyForNavigationAction() should not be error logging.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-03-27 08:51:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43113
EWS
Comment 2
2025-03-27 09:59:26 PDT
Committed
292766@main
(32a43cb1ff62): <
https://commits.webkit.org/292766@main
> Reviewed commits have been landed. Closing PR #43113 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-27 10:00:14 PDT
<
rdar://problem/148027621
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug