Logging in dispatchDecidePolicyForNavigationAction() should not be error logging https://bugs.webkit.org/show_bug.cgi?id=290538

Reviewed by Simon Fraser.

* Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/292766@main